--- a/plugin.xml
+++ b/plugin.xml
@@ -15,6 +15,33 @@
         <clobbers target="fileManager" />
     </js-module>
 
+    <!-- android -->
+    <platform name="android">
+        <!-- permissions -->
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+        </config-file>
+
+        <!-- feature -->
+        <config-file target="res/xml/config.xml" parent="/*">
+            <!-- enable androidx and kotlin -->
+            <preference name="AndroidXEnabled" value="true" />
+            <preference name="GradlePluginKotlinEnabled" value="true" />
+
+            <!-- plugin -->
+            <feature name="FileManager">
+                <param name="android-package" value="com.kepat.cordova.file.manager.FileManager"/>
+            </feature>
+        </config-file>
+
+        <!-- source files -->
+        <source-file src="src/android/FileManager.kt" target-dir="java/com/kepat/cordova/file/manager" />
+        <source-file src="src/android/Helper.kt" target-dir="java/com/kepat/cordova/file/manager" />
+
+        <!-- additonal gradle -->
+        <framework src="src/android/gradle/build-extras.gradle" custom="true" type="gradleReference"/>
+    </platform>
+
     <!-- frameworks supported -->
     <engines>
         <engine name="cordova" version=">=10.0.0"/>
